--- a/youtube-backend/package.json
+++ b/youtube-backend/package.json
@@ -14,8 +14,11 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "nodemon": "^3.1.10"
