video upload, delete and update done with login and signup done

--- a/youtube-backend/.env
+++ b/youtube-backend/.env
@@ -1,1 +1,4 @@
 MONGODB_URL = 'mongodb+srv://devangsawant127:sage9930@cluster0.wweaxvk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+CLOUDINARY_CLOUD_NAME = 'drmeatlox'
+CLOUDINARY_API_KEY = '688714145949966'
+CLOUDINARY_API_SECRET = 'MWgTIgbPj3QmFdZ2LEwZ-lwxljk'
