implement user authentication with JWT, add comment functionality, and integrate like/dislike features for videos

--- a/youtube-backend/.env
+++ b/youtube-backend/.env
@@ -2,3 +2,6 @@ MONGODB_URL = 'mongodb+srv://devangsawant127:sage9930@cluster0.wweaxvk.mongodb.n
 CLOUDINARY_CLOUD_NAME = 'drmeatlox'
 CLOUDINARY_API_KEY = '688714145949966'
 CLOUDINARY_API_SECRET = 'MWgTIgbPj3QmFdZ2LEwZ-lwxljk'
+
+ACCESS_TOKEN_SECRET='reynasage'
+REFRESH_TOKEN_SECRET='omenjett'
