--- a/youtube-frontend/package.json
+++ b/youtube-frontend/package.json
@@ -1,27 +1,52 @@
 {
-  "name": "vue",
+  "name": "a1-fence-uk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@fancyapps/ui": "^6.0.32",
+    "@gsap/react": "^2.1.2",
+    "@react-three/fiber": "^9.3.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@tanstack/react-query": "^5.89.0",
+    "@videojs/http-streaming": "^3.17.2",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.5",
+    "gsap": "^3.13.0",
+    "hls.js": "^1.6.13",
+    "lenis": "^1.3.11",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
+    "react-topbar-progress-indicator": "^4.1.1",
+    "swiper": "^12.0.2",
+    "three": "^0.180.0",
+    "video.js": "^8.23.4",
+    "videojs-hls-quality-selector": "^2.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "@eslint/js": "^9.22.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "sass": "^1.87.0",
+    "vite": "^6.3.1"
   }
 }
